# rust-chess

./: Cargo.toml  LICENSE  README.md
src/: engine.rs  main.rs
