[package]
name = "rust-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bit-set = "*"
#bitvec = "1"
num-traits = "*"
bitintr = "*"
rand = "*"
fragile = "*"
pangocairo = "*"
gtk = { version = "0.8.1", package = "gtk4" }

[features]

salewskiChessDebug = [] # feature has no explicit dependencies

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"

[build]
rustflags = ["-C", "target-cpu=native"]
